--- a/src/components/Item/styles.scss
+++ b/src/components/Item/styles.scss
@@ -1,8 +1,10 @@
+@import '../../utils/breakpoints.scss';
+
 .item {
-  width: 250px;
+  width: 220px;
   height: 370px;
-  max-width: 250px;
-  max-height: 370px;
+  // max-width: 250px;
+  // max-height: 370px;
   // background: rgb(255 255 255 / 80%);
   // background: rgb(238,174,202);
   // background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
@@ -13,16 +15,18 @@
   border-radius: 10%;
   align-items: center;
   font-weight: bolder;
-
+  
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+40,000000+100&0.65+56,0+100 */
   // background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.65) 40%, rgba(187,187,187,0.65) 56%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
   // background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.65) 40%,rgba(187,187,187,0.65) 56%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
   background: radial-gradient(ellipse at center,  rgba(255,255,255,0.65) 40%,rgba(187,187,187,0.65) 56%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6ffffff', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
-
+  text-align: center;
+  margin-bottom: 5px;
+  justify-self: center;
+  
   img {
-    height: 70%;
+    height: 60%;
     width: 100%;
     object-fit: contain;
   }
@@ -32,7 +36,7 @@
     text-transform: uppercase;
     font-size: xx-large;
   }
-
+  
   .button {
     background: #000000;
     // background-image: -webkit-linear-gradient(top, #000000, #787878);
@@ -48,8 +52,9 @@
     font-size: 15px;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
+    margin: 10px auto;
   }
-
+  
   .button:hover {
     // background: #424242;
     // background-image: -webkit-linear-gradient(top, #424242, #a8a8a8);
@@ -58,5 +63,23 @@
     // background-image: -o-linear-gradient(top, #424242, #a8a8a8);
     background-image: linear-gradient(to bottom, #424242, #a8a8a8);
     text-decoration: none;
+  }
+  
+  @media #{$mobiles} {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    img {
+      grid-row-start: 1;
+      grid-row-end: 2;
+      height: inherit;
+      width: auto;
+    }
+    &__details {
+      height: 55%;
+      display: flex;
+      justify-content: space-around;
+      flex-flow: column;
+    }
   }
 }
