--- a/src/components/ItemDetailsShort/styles.scss
+++ b/src/components/ItemDetailsShort/styles.scss
@@ -4,7 +4,7 @@
       display: flex;
       justify-content: space-around;
       width: 60%;
-      margin: 10px 0;
+      margin: auto;
     }
     &--data {
       text-align: center;
