--- a/src/components/ItemDetailsShort/styles.scss
+++ b/src/components/ItemDetailsShort/styles.scss
@@ -3,11 +3,12 @@
     &--short {
       display: flex;
       justify-content: space-around;
-      width: 60%;
-      margin: auto;
+      width: 90%;
+      margin: 10px auto;
     }
     &--data {
       text-align: center;
+      font-size: 18px;
       div:first-child {
         font-weight: 900;
       }
