--- a/src/components/ItemsContainer/styles.scss
+++ b/src/components/ItemsContainer/styles.scss
@@ -13,6 +13,7 @@
   }
   @media #{$tablets} {
     grid-template-columns: repeat(2, 1fr);
+    padding: 1% 5em;
   }
   @media #{$laptops} and (orientation: landscape) {
     grid-template-columns: repeat(3, 1fr);
