--- a/src/components/ItemDetailsModal/styles.scss
+++ b/src/components/ItemDetailsModal/styles.scss
@@ -35,6 +35,9 @@
     &__content-description,
     &__content-ingredients {
       padding: 0 30px;
+      &--title {
+        font-weight: bold;
+      }
     }
     
     &__button-close {
