--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -2,12 +2,14 @@
   background-color: #eee;
   color: #444;
   cursor: pointer;
-  padding: 18px;
+  padding: 14px;
   width: 100%;
   text-align: left;
   border: none;
   outline: none;
   transition: 0.4s;
+  display: flex;
+  justify-content: space-between;
 }
 
 .active, .accordion:hover {
