--- a/src/components/ItemsContainer/styles.scss
+++ b/src/components/ItemsContainer/styles.scss
@@ -19,6 +19,10 @@
     grid-template-columns: repeat(3, 1fr);
     padding: 1% 5%;
   }
+  @media #{$laptops} and (orientation: portrait) {
+    grid-template-columns: repeat(3, 1fr);
+    padding: 1% 5%;
+  }
   @media #{$desktops}, #{$desktops-widescreen} {
     grid-template-columns: repeat(4, 1fr);
   }
