--- a/src/components/SortingBar/styles.scss
+++ b/src/components/SortingBar/styles.scss
@@ -1,3 +1,5 @@
+@import '../styles/commons.scss';
+
 .sorting-bar__container {
   display: flex;
   padding: 0 10%;
@@ -6,4 +8,7 @@
   color: #fff;
   padding-bottom: 5px;
   margin-bottom: 5px;
+  @media #{$mobiles} {
+    flex-flow: column;
+  }
 }
