--- a/src/components/SortingButton/styles.scss
+++ b/src/components/SortingButton/styles.scss
@@ -1,3 +1,5 @@
+@import '../styles/commons.scss';
+
 .sorting-button {
   &__container {
     width: 15em;
@@ -8,6 +10,9 @@
     color: #fff;
     padding-bottom: 5px;
     margin-bottom: 5px;
+    @media #{$mobiles} {
+      width: 100%;
+    }
     button {
       height: 40px;
       align-items: center;
@@ -32,9 +37,9 @@
   &__direction {
     padding-left: 5px;
     // &--desc {
-    //   transform: rotate( -180deg );
-    //   transition: transform 150ms ease;
-    //   transform-origin: center center;
-    // }
+      //   transform: rotate( -180deg );
+      //   transition: transform 150ms ease;
+      //   transform-origin: center center;
+      // }
+    }
   }
-}
